# serializer version: 1
# name: test_number_entities[humidifier][number.humidifier_200s_mist_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 6,
      'min': 1,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.humidifier_200s_mist_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Mist level',
    'platform': 'vesync',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'mist_level',
    'unique_id': '200s-humidifier0-mist_level',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_entities[humidifier][number.humidifier_200s_mist_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Humidifier 200s Mist level',
      'max': 6,
      'min': 1,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.humidifier_200s_mist_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '6',
  })
# ---
# name: test_number_entities[humidifier_300s][number.humidifier_300s_mist_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 6,
      'min': 1,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.humidifier_300s_mist_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Mist level',
    'platform': 'vesync',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'mist_level',
    'unique_id': '300s-humidifier0-mist_level',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_entities[humidifier_300s][number.humidifier_300s_mist_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Humidifier 300s Mist level',
      'max': 6,
      'min': 1,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.humidifier_300s_mist_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '6',
  })
# ---
# name: test_number_entities[humidifier_300s][number.humidifier_300s_warm_mist_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 3,
      'min': 1,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.humidifier_300s_warm_mist_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Warm mist level',
    'platform': 'vesync',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'warm_level',
    'unique_id': '300s-humidifier0-warm_level',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_entities[humidifier_300s][number.humidifier_300s_warm_mist_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Humidifier 300s Warm mist level',
      'max': 3,
      'min': 1,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.humidifier_300s_warm_mist_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
